feat: add prod and staging fly conf

--- a/fly-prod-1.toml
+++ b/fly-prod-1.toml
@@ -3,14 +3,14 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "weaviate-staging"
+app = "weaviate-prod-1"
 primary_region = "sjc"
 
 [build]
 
 [env]
   SWAP = "1"
-  SWAP_SIZE = "512M"
+  SWAP_SIZE = "1G"
   QUERY_DEFAULTS_LIMIT = "25"
   AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED = "false"
   AUTHENTICATION_APIKEY_ENABLED = "true"
@@ -20,8 +20,8 @@ primary_region = "sjc"
   CLUSTER_HOSTNAME = "node1"
 
 [mounts]
-  source = "weaviate_staging_data"
-  destination = "/var/lib/weaviate"
+  source="weaviate_prod_1_data"
+  destination="/var/lib/weaviate"
 
 [http_service]
   internal_port = 8080
